# TmuxScript

./: .tmx_bash  CMakeLists.txt  README.md  exp.tmx  main.cpp  setup.tmx  test.cc  tmxsinter  web.tmxs
scripts_for_testing/: valid.tmx
src/: CMakeLists.txt  command.h  script_interpreter.cc  script_interpreter.h  util.cc  util.h
test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test  testexec  tmuxscript
test/Testing/Temporary/: CTestCostData.txt
test/src/: Makefile  cmake_install.cmake
